# sepiascraped

./: Cargo.toml  LICENSE-MIT  README.md
.cargo/: config.toml
assets/: project.scm
assets/shaders/texture/: composite.wgsl  displace.wgsl  noise.wgsl  ramp.wgsl
assets/shaders/ui/: grid.wgsl  node_material.wgsl
src/: event.rs  index.rs  main.rs  render_layers.rs
src/engine/: mod.rs
src/engine/graph/: event.rs  mod.rs
src/engine/op/: mod.rs
src/engine/op/component/: mod.rs
src/engine/op/component/types/: camera.rs  geom.rs  light.rs  mod.rs  window.rs
src/engine/op/material/: mod.rs
src/engine/op/material/types/: standard.rs
src/engine/op/mesh/: mod.rs
src/engine/op/mesh/types/: cuboid.rs  grid.rs  noise.rs  plane.rs
src/engine/op/texture/: mod.rs  render.rs
src/engine/op/texture/types/: composite.rs  mod.rs  noise.rs  ramp.rs  render.rs
src/engine/param/: mod.rs
src/engine/render/: mod.rs
src/engine/script/: asset.rs  mod.rs
src/op/: mod.rs
src/op/component/: mod.rs
src/op/component/types/: camera.rs  geom.rs  window.rs
src/op/material/: mod.rs
src/op/material/types/: mod.rs  standard.rs
src/op/mesh/: mod.rs
src/op/mesh/types/: cuboid.rs  grid.rs  mod.rs  noise.rs  plane.rs
src/op/texture/: mod.rs  render.rs
src/op/texture/types/: composite.rs  noise.rs  ramp.rs
src/param/: mod.rs
src/render/: mod.rs
src/script/: asset.rs  helper.rs  mod.rs  repl.rs
src/texture/: composite.rs  event.rs  mod.rs  ramp.rs  render.rs
src/texture/node/: composite.rs  mod.rs  ramp.rs
src/texture/operator/: composite.rs  mod.rs  noise.rs  ramp.rs
src/texture/ramp/: mod.rs
src/ui/: camera.rs  event.rs  graph.rs  mod.rs
src/ui/grid/: mod.rs
src/ui/grid/render/: grid.wgsl  mod.rs  plane_render.wgsl  shadow.rs
