[package]
name = "sepiascraped"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = {  version = "0.13", features = ["default", "file_watcher"] }
bevy_egui = "0.26.0"
egui_extras = {  version = "0.26", features = ["syntect"] }
egui_autocomplete = "5.0.0"
petgraph = "0.6.4"
bevy_mod_picking = { path = "../../aevyrie/bevy_mod_picking", default-features = false, features = [
    "backend_raycast",
    "backend_bevy_ui",
    "backend_sprite",
#    "debug",
    "selection",
#    "highlight",
    "backend_egui" ] }
bevy_prototype_lyon = "0.11"
layout-rs = "0.1"
log = "0.4.20"
steel-core = { path = "../../mattwparas/steel/crates/steel-core" }
steel-derive= { path = "../../mattwparas/steel/crates/steel-derive" }
steel-parser = { path = "../../mattwparas/steel/crates/steel-parser" }
bevy_mod_debugdump = "0.10"
thiserror = "1"
rustyline = { version = "14", features = ["derive"] }
colored = "2.1.0"
rand = "0.8.5"