[package]
name = "sepiascraped"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = { path = "../../bevyengine/bevy", features = ["default", "file_watcher"] }
bevy_egui = { path = "../../mvlabat/bevy_egui" }
egui_extras = {  version = "0.26", features = ["syntect"] }
egui_autocomplete = "5.0.0"
petgraph = "0.6.4"
bevy_mod_picking = { path = "../../aevyrie/bevy_mod_picking", default-features = false, features = [
    "backend_raycast",
    "backend_bevy_ui",
    "backend_sprite",
#    "debug",
    "selection",
#    "highlight",
    "backend_egui" ] }
bevy_prototype_lyon = { path = "../../Nilirad/bevy_prototype_lyon"}
layout-rs = "0.1"
log = "0.4.20"
steel-core = { path = "../../mattwparas/steel/crates/steel-core" }
steel-derive= { path = "../../mattwparas/steel/crates/steel-derive" }
steel-parser = { path = "../../mattwparas/steel/crates/steel-parser" }
bevy_mod_debugdump = { path = "../../jakobhellermann/bevy_mod_debugdump" }
thiserror = "1"
rustyline = { version = "14", features = ["derive"] }
colored = "2.1.0"
rand = {  version = "0.8.5", features = ["small_rng"] }
iyes_perf_ui = { path = "../../IyesGames/iyes_perf_ui" }